--- a/TIL/2017-11-30.md
+++ b/TIL/2017-11-30.md
@@ -1,7 +1,9 @@
 `Java-Spring`
+- Spring 에서 json을 request response 처리하는 더 효율적인 방법 찾았다.
 
-Spring에서 Json형식 request, response
-
-Spring fileupload
+- json-simple.jar를 사용했다. 
+    - json to object
+    - object to json
 
 `Database`
+- mybatis에서 sequences를 selectKey로 사용하는방법을 알았다.
