--- a/TIL/2017-12-28.md
+++ b/TIL/2017-12-28.md
@@ -50,4 +50,4 @@ Error during WebSocket handshake: Unexpected response code: 400
 ```
 - 예상했던것과 같이 spring security를 제거해봤다. 그랬더니 403 forbidden 에러가 사라졌다. spring security는 나중에 생각하고 일단 handshake 400 에대한 오류를 고치면 될것같다.
 - 다시생각해보니 http 프로토콜로 사용하는 설정이 security-context에 포함되어있던것 때문인것같다. 웹소켓은 ws 프로토콜을 사용하기 떄문이다. 
-- 한가지 오류만 해결하면 작동 할 것 같다.
+- 몇번 실행해보니 에러가 뜨긴하는데 작동을 하긴한다. 작동을 했다안했다한다. 역시 고쳐야 할 문제이다.
