--- a/TIL/2018-01-03.md
+++ b/TIL/2018-01-03.md
@@ -10,4 +10,4 @@
 
 `battle logic`
 - 게임을 만드는 내내 구조에 대한 고민을 했다. 더러워 지는 코드에 대한 고민과 프로토타입이나 클래스를 사용하지 않는 자바스크립트 코딩에 대하여도 생각했다.
-- 단시간내에 만드려고 기획한 프로젝트임으로 어느정도 코드를 짜는데 있는 편의를 위한 주석과 깔끔하게는 짜려고 하나, 구조를 배우는것은 잠시 미룬다.ㄴ
+- 단시간내에 만드려고 기획한 프로젝트임으로 어느정도 코드를 짜는데 있는 편의를 위한 주석과 깔끔하게는 짜려고 하나, 구조를 배우는것은 잠시 미룬다.
